	* Changed error handling to use new libraw1394 error handling
	* Code beautification

Tue Feb  6 03:19:07 2001   <GordPeters@smarttech.com>

	* Added libraw1394 version detection to configuration process
	* Added compile options for different versions of libraw1394
	* Cleaned things up a bit

Wed Apr 11 14:24:19 2001   <GordPeters@smarttech.com>

	* Added patch from Dan Dennedy which included:
	   - resume iso receive in camera setup
	   - new dc1394_dma_unlisten() function in dc1394_capture.c
	   - mutually exclusive format enumerations
	* Made all enumerations mutually exclusive by 32 rather that 16
	* Fixed code which broke due to enumeration change
	* Added macros for feature to offset querying in dc1394_control.c
	* Added backwards compatibility to Format 7 register access code

Thu Apr 12 12:52:30 2001   <GordPeters@smarttech.com>

	* Fixed dc1394_get/set_video_mode/format/framerate to work with new
	  enumerations.
	* Fixed FEATURE_TO_VALUE/INQUIRY_OFFSET macros to work for both
	  FEATURE_HI and FEATURE_LO queries.
	* Exposed dc1394_feature_desc (feature description array).
	* Created dc1394_internal.h for definitions internal to the library
	* Moved some definitions from dc1394_control.h to dc1394_internal.h

Mon Apr 16 11:56:17 2001   <GordPeters@smarttech.com>

	* Fixed feature counting for loops in dc1394_control.c (Dan Dennedy)
	* Fixed get/set_trigger_mode functions in dc1394_control.c to work with
	  new enumerations (Damien Douxchamps)
	* Fixed color coding ID functions in dc1394_format7.c to conform to new
	  enumerations (Damien Douxchamps)

Tue Apr 24 15:12:19 2001   <GordPeters@smarttech.com>

	* Fixed problem with dc1394_auto_on_off() ignoring the value passed in
	  when setting auto mode on or off (fix by Li Ming
	  <ming@mpi-sb.mpg.de>)

Mon Apr 30 12:46:22 2001   <GordPeters@smarttech.com>

	* Fixed problem with dc1394_get_camera_feature() failing due to feature
	  id being modified by feature to offset macros (fix by Li Ming)